welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:6: error: only classes can have declared but undefined members
  val decalage: Int
      ^Array2:12: error: reassignment to val
    decalage = litMessage().toInt
             ^